hphp/test/zend/good/ext/reflection/tests/ReflectionFunction_getClosureThis.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('reflection') || !defined('PHP_VERSION_ID') || PHP_VERSION_ID < 50300) {
  print 'skip';
}
}
