hphp/test/zend/bad/ext/reflection/tests/ReflectionFunction_isDeprecated_basic.php.skipif
<?php
if (!extension_loaded('reflection') || !defined('PHP_VERSION_ID') || PHP_VERSION_ID < 50300) print 'skip';
?>